--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,16 +6,23 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=2.7.0 <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
+  dio: 3.0.10
+  shared_preferences: ^2.0.3
+  mobx: ^1.2.1+4
+  flutter_mobx: ^1.1.0+2
+  bot_toast: ^3.0.5
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^1.11.5
+  mobx_codegen: ^1.1.2
 
 flutter:
 
