--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,16 +12,17 @@ dependencies:
   flutter:
     sdk: flutter
   dio: 3.0.10
-  shared_preferences: ^2.0.3
+  shared_preferences: any
   mobx: ^1.2.1+4
   flutter_mobx: ^1.1.0+2
   bot_toast: ^3.0.5
+  smart_select: ^4.3.2
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: ^1.11.5
+  build_runner: any
   mobx_codegen: ^1.1.2
 
 flutter:
