--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  url_launcher: ^6.0.2
   bot_toast: ^3.0.5
   dio: 3.0.10
   shared_preferences: any
